Finish T1.2