@@ -1,10 +1,12 @@
 plugins {
     application
-    id("org.graalvm.buildtools.native")
 }
+
+var incubatorArguments = listOf("--enable-preview", "--add-modules", "jdk.incubator.vector")
 
 application {
     mainClass.set("com.omaarr90.Main")
+    applicationDefaultJvmArgs = incubatorArguments
 }
 
 dependencies {
@@ -17,8 +19,15 @@ dependencies {
 graalvmNative {
     binaries {
         named("main") {
-            imageName.set("qsim")
+            imageName.set("cli")
             mainClass.set(application.mainClass)
+            buildArgs.addAll(
+                "--enable-preview",
+                "--add-modules=jdk.incubator.vector",
+                "-H:+VectorAPISupport",
+                "-H:+UnlockExperimentalVMOptions",
+                "-O3", "-march=native"
+            )
         }
     }
 }
